--- a/index.html
+++ b/index.html
@@ -180,10 +180,9 @@
         <div class="w3-container">
           <h5 class="w3-opacity"><b>King' Langley College, Watford</b></h5>
           <h6 class="w3-text-blue"><i class="fas fa-calendar-alt w3-margin-right"></i>2014 - 2016</h6>
-          <p>Master Degree2 years Motor Vehicle Mechanics achieved-
-            IMIAL Level 1 and Diploma in Light Vehicle Maintenance
-            IMIAL Level 2 and Diploma in Light Vehicle Maintenance
-            </p>
+          <p>Master Degree: 2 years Motor Vehicle Mechanics achieved</p>
+          <p>IMIAL Level 1 and Diploma in Light Vehicle Maintenance</p>
+          <p>IMIAL Level 2 and Diploma in Light Vehicle Maintenance</p>
           <hr>
         </div>
         <div class="w3-container">
