--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <p><i class="fas fa-home w3-margin-right w3-large w3-text-blue"></i>London, UK</p>
           <p><i class="fas fa-envelope w3-margin-right w3-large w3-text-blue"></i>melihhan@hotmail.co.uk</p>
           <p><i class="fas fa-phone w3-margin-right w3-large w3-text-blue"></i>07907705078</p>
-          <p><a href="https://github.com/M311HAN" style="text-decoration: none;">
+          <p><a href="https://github.com/M311HAN" style="text-decoration: none;" target="_blank"> 
             <i class="fa-brands fa-github w3-margin-right w3-large w3-text-blue"></i>https://github.com/M311HAN</a></p>          
           <hr>
 
