--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@
           <h5 class="w3-opacity"><b>HyperionDev Bootcamp</b></h5>
           <h6 class="w3-text-blue"><i class="fas fa-calendar-alt w3-margin-right"></i>2023 - current</h6>
           <p>Full stack software engineer & web development</p>
+          <p><i class="fa-solid fa-graduation-cap"></i> View my portfolio: 
+            <a href="https://www.hyperiondev.com/portfolio/131493/" target="_blank" style="text-decoration: none;">Click Here</a></p>
           <hr>
         </div>
         <div class="w3-container">
